codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_dynamic_tool_call_compact.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1718
expression: compact
---
• Called
  └ workspace/
        inspect({"path":"synthetic-
        session.jsonl","limit":8})
    result line 1: persisted dynamic
        tool output
    result line 2: persisted dynamic
        tool output
    result line 3: persisted dynamic
