codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_dynamic_tool_call_full_transcript_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: transcript
---
• Tool call
  Tool: workspace/inspect
  Call ID: call-dynamic-full
  Status: succeeded
  Duration: 320.00ms
Arguments:
  {
    "path": "synthetic-session.jsonl",
    "limit": 8
  }
Result:
  result line 1: persisted dynamic tool
  output
  result line 2: persisted dynamic tool
  output
  result line 3: persisted dynamic tool
  output
  result line 4: persisted dynamic tool
  output
  result line 5: persisted dynamic tool
  output
  result line 6: persisted dynamic tool
  output
  result line 7: persisted dynamic tool
  output
  result line 8: persisted dynamic tool
  output
