codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_dynamic_tool_call_media_transcript_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: transcript
---
• Tool call
  Tool: capture
  Call ID: call-dynamic-media
  Status: succeeded
  Duration: 40.00ms
Arguments:
  {
    "mode": "media"
  }
Result:
  caption
  <image content: 8 encoded bytes>
  <audio content: 8 encoded bytes>
