codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_error_mentioning_truncation_without_marker_has_no_banner.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1684
expression: transcript
---
• MCP tool call
  Tool: workspace.read_log
  Call ID: call-mention-only
  Status: failed
Arguments:
  {
    "path": "synthetic-session.jsonl"
  }
Result:
  Error: backend failed: 100 chars truncated…
