codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_full_transcript_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: transcript
---
• MCP tool call
  Tool: search.find_docs
  Call ID: call-full-transcript
  Status: succeeded
  Duration: 1.42s
Arguments:
  {
    "query": "full transcript",
    "limit": 8
  }
Result:
  result line 1: persisted MCP output
  result line 2: persisted MCP output
  result line 3: persisted MCP output
  result line 4: persisted MCP output
  result line 5: persisted MCP output
  result line 6: persisted MCP output
  result line 7: persisted MCP output
  result line 8: persisted MCP output
Structured content:
  {
    "matches": 8,
    "complete": true
  }
