codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_truncated_error_transcript_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: transcript
---
• MCP tool call
  Tool: workspace.read_log
  Call ID: call-truncated-error
  Status: failed
Arguments:
  {
    "path": "synthetic-session.jsonl"
  }
⚠ Saved output is already truncated upstream; missing content cannot be
recovered.
Result:
  Error: backend failed: 100 chars truncated…
